--- a/readme
+++ b/readme
@@ -21,7 +21,7 @@ Campo de profundidad modifcado de los ejemplos de las librerias proscene y frame
 
 Mediante el uso de las teclas + y - se puede ver el enfoque de las cajas:
 
-![Screenshot](screenshot.png)
+![Screenshot](https://github.com/Jhonnyguzz/shaders/blob/master/screenshot.png)
 
 ## Trabajo futuro
 
